fix: do not load archived events to ensure not reapply an old one in territory update
